--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+   <div class="loader-wrap">
+   	<div class="loader"></div>
+   </div>
+  </app-root>
 </body>
 </html>
